# StockMarketMCP

./: .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/mcp_server/: constant_variables.py  main.py
